--- a/index.css
+++ b/index.css
@@ -182,7 +182,7 @@ a.pure-button-primary {
     position: absolute;
     top: 99%;
     width: 99%;
-    min-height: 12%;
+    height: 100%;
     z-index: 2;
     background: #66CDAA;
 
