--- a/index.css
+++ b/index.css
@@ -180,9 +180,9 @@ a.pure-button-primary {
 .content-wrapper {
     /* These styles are required for the "scroll-over" effect */
     position: absolute;
-    top: 99%;
-    width: 99%;
-    height: 100%;
+    top: 100%;
+    width: 100%;
+    min-height: 12%;
     z-index: 2;
     background: #66CDAA;
 
